Fix issue caused by refactoring in db
Signed-off-by: ZorEl212 <yabsirad212@proton.me>

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <body>
         <H1>States</H1>
         <UL>
-            {% for values in states_list.values() %}
+            {% for values in states_list %}
             <LI>{{ values['id'] }}: <B>{{ values['name'] }}</B></LI>
         {% endfor %}
         </UL>
